# finwork

./: .gitignore  AGENTS.md  CLA.md  CLAUDE.md  PRIVACY.md  README.md  SECURITY.md  components.json  eslint.config.mjs  instrumentation.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  requirements.txt  tsconfig.typecheck.json
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  react-file-icon.d.ts
data/: demo_reimbursements.csv
docs/: .ci-validation.md  architecture.html  architecture.md  openhuman-analysis.md  retention-and-diagnostics.md  runbook-signed-release.md  spec-debt-cleanup.md  spec-feature-flags.md  updater-signing.md  报销管理制度.txt  财务Agent-功能需求纪要.md
e2e/: global-setup.ts  journeys.spec.ts
lib/: format.ts  icons.ts  types.ts  utils.ts
scripts/: agent-ws-server.ts  ci-cancel-aware.sh  gen-excel-preview-fixture.py  knowledge-reset.mjs  link-worktree-node-modules.mjs  prepare-tauri.mjs  windows-smoke.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: account-mapping.test.ts  accounting-adapter.test.ts  agent-abort-retry.test.ts  agent-confirm-flow.test.ts  agent-context.test.ts  agent-event-stream.test.ts  agent-pipeline.test.ts  agent-query-helpers.test.ts  agent-role-toggle.test.ts  agent-trace-write.test.ts  agents-space.test.ts  all.test.ts  api-boundaries.test.ts  app-version.test.ts  ask-user-multi-state.test.ts  ask-user-multi.test.ts  attention.test.ts  business-analysis-script.test.ts  business-analysis-v2.test.ts  (+149 more)
(+424 files in other folders)
