[package]
name = "finance-agent"
version = "0.1.2"
description = "Finance Agent desktop shell"
authors = ["gyro"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset", "webview-data-url"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

# Windows:用 Job Object 把内置 next-server 子进程绑定到 KILL_ON_JOB_CLOSE,父进程(本 app)无论正常退出
# 还是崩溃/被强杀,OS 关闭 job 句柄时一并杀掉子进程,避免残留 node 占内存/端口(见 lib.rs)。
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_JobObjects"] }
